--- a/css/main2.css
+++ b/css/main2.css
@@ -70,7 +70,7 @@ input[id^="spoiler"] + label {
   width: 200px;
   margin: 0 auto;
   padding: 5px 20px;
-  background: #2868FF;
+  background: #33ccFF;
   color: #fff;
   text-align: center;
   font-size: 20px;
